--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,12 @@
         "random": "cpp",
         "istream": "cpp",
         "limits": "cpp",
-        "numeric": "cpp"
+        "numeric": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "forward_list": "cpp"
     },
     "cmake.configureOnOpen": false
 }
