--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 # set the project name
-project(Tools)
+project(Test)
 
 # add the executable
-add_executable(Tools Main.cpp Tools.cpp)
+add_executable(Test Test.cpp Tools.cpp)
