--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,24 @@
         "bit": "cpp",
         "clocale": "cpp",
         "ctime": "cpp",
-        "numeric": "cpp"
+        "numeric": "cpp",
+        "ranges": "cpp",
+        "charconv": "cpp",
+        "chrono": "cpp",
+        "format": "cpp",
+        "forward_list": "cpp",
+        "iomanip": "cpp",
+        "locale": "cpp",
+        "mutex": "cpp",
+        "optional": "cpp",
+        "ratio": "cpp",
+        "span": "cpp",
+        "sstream": "cpp",
+        "stop_token": "cpp",
+        "thread": "cpp",
+        "xlocbuf": "cpp",
+        "xlocmes": "cpp",
+        "xlocmon": "cpp",
+        "xloctime": "cpp"
     }
 }
